<resources>
    <string name="app_name">Chat application</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="comfirm_password">Comfirm Password</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Signup</string>
    <string name="type_a_message">Type a message</string>
    <string name="proceed">Proceed</string>
    <string name="select_user">Select User</string>
    <string name="inbox_is_empty">Inbox is empty</string>
    <string name="are_you_sure_you_want_to_delete_this_chat">Are you sure you want to delete this chat?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
</resources>